# Minecraft-Injection-Client

./: CMakeLists.txt  README.md  build.bat  dllmain.cpp  functions.cpp  main.cpp  modules.cpp
include/: functions.h  main.h  modules.h
src/: GUI.cpp  GUI.h  dllmain.cpp  functions.cpp  functions.h  main.cpp  main.h
src/hooks/: opengl_hook.cpp  opengl_hook.h
src/managers/: InputManager.cpp  InputManager.h
src/mc/: Minecraft.cpp  Minecraft.h  Player.cpp  Player.h
src/modules/: Modules.cpp  Modules.h  fly.cpp
src/modules/Fly/: Fly.cpp
src/utils/: jni_utils.cpp  jni_utils.h
